cp project/force-app/main/default/objects/Payment_cu__c/Payment_cu__c.object-meta.xml
<CustomObject>
    <label>Payment_cu</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>