cp project/force-app/main/default/objects/Payment_cu__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>