cp project/force-app/main/default/objects/Payment_cu__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Advance</fullName>
                <default>true</default>
                <label>Booking Advance</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Instalment</fullName>
            </value>
            <value>
                <fullName>Additional Charge</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
                <isActive>false</isActive>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Down Payment</fullName>
                <isActive>false</isActive>
                <label>Down Payment</label>
            </value>
            <value>
                <fullName>Final Payment,</fullName>
                <isActive>false</isActive>
                <label>Final Payment,</label>
            </value>
            <value>
                <fullName>Installment</fullName>
                <isActive>false</isActive>
                <label>Installment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>