cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Booking_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Booking__c)</errorConditionFormula>
    <errorMessage>Please select a Booking.</errorMessage>
</ValidationRule>