cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Future_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Payment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Payment Date cannot be a future date.</errorMessage>
</ValidationRule>