cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Payment_Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Payment Amount must be greater than zero.</errorMessage>
</ValidationRule>