cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Payment_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Payment_Date__c)</errorConditionFormula>
    <errorMessage>Payment Date is required.</errorMessage>
</ValidationRule>