cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Payment_Mode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Mode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Amount__c &gt; 0,
    ISBLANK(TEXT(Payment_Mode__c))
)</errorConditionFormula>
    <errorMessage>Please select a Payment Mode.</errorMessage>
</ValidationRule>