cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Payment_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Payment_Status__c))</errorConditionFormula>
    <errorMessage>Please select the Payment Status.</errorMessage>
</ValidationRule>