cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Payment_Status__c, &quot;Failed&quot;),
        ISPICKVAL(Payment_Status__c, &quot;Refunded&quot;)
    ),
    ISBLANK(Remarks__c)
)</errorConditionFormula>
    <errorMessage>Please enter remarks for failed or refunded payments.</errorMessage>
</ValidationRule>