cp project/force-app/main/default/objects/Payment_cu__c/validationRules/Transaction_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_ID_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Payment_Status__c, &quot;Successful&quot;),
    ISBLANK(Transaction_ID__c)
)</errorConditionFormula>
    <errorMessage>Transaction ID is required for successful payments.</errorMessage>
</ValidationRule>